welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:String = "Gris"
    avance()
    if(estFaceMur)
    {return}
    else
    do couleur = getCouleurSol()
    avance()
    while (couleur == Color.green)
    
    }
        return couleur
}        
